###########################################################################
##  Re-Merge
##  Block merging for off-line compression.
##
##  Copyright (C) 2003-2022 by Raymond Wan, All rights reserved.
##  Contact:  rwan.work@gmail.com
##
##  This file is part of Re-Merge.
##  
##  Re-Merge is free software; you can redistribute it and/or 
##  modify it under the terms of the GNU General Public License 
##  as published by the Free Software Foundation; either version 
##  3 of the License, or (at your option) any later version.
##  
##  Re-Merge is distributed in the hope that it will be useful,
##  but WITHOUT ANY WARRANTY; without even the implied warranty of
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##  GNU General Public License for more details.
##  
##  You should have received a copy of the GNU General Public 
##  License along with Re-Merge; if not, see 
##  <http://www.gnu.org/licenses/>.
###########################################################################
CMAKE_MINIMUM_REQUIRED (VERSION 3.5)

##  Project name
PROJECT ("Re-Merge" VERSION 1.0 LANGUAGES C)

##  Add subdirectories to the build
ADD_SUBDIRECTORY (src)

